# adremote-mcp

./: .gitignore  CLAUDE.md  README.md  claude_config_example.json  connect_examples.py  install.ps1  install.sh  pyproject.toml  requirements.txt  run-ssh-mcp.cmd  run-ssh-mcp.sh  ssh_mcp_server.py  ssh_setup_guide.md  test_server.py
.claude/: settings.json  settings.local.json
