[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for remote SSH connections to Ubuntu servers"
authors = [
    {name = "SSH MCP", email = "ssh-mcp@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "paramiko>=3.0.0",
    "mcp>=0.1.0",
    "asyncio-ssh>=2.14.0"
]
keywords = ["ssh", "mcp", "ubuntu", "remote", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/example/ssh-mcp-server"
Repository = "https://github.com/example/ssh-mcp-server.git"
Issues = "https://github.com/example/ssh-mcp-server/issues"

[project.scripts]
ssh-mcp-server = "ssh_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssh_mcp_server*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88